# rigorq

./: README.md  pyproject.toml  pytest.ini  run_tests.sh
.github/workflows/: publish.yml
src/rigorq/: __init__.py  __main__.py  cli.py  engine.py  reporter.py  utils.py
src/rigorq/checks/: docstrings.py  style.py
tests/: test_cli_blackbox.py  test_cli_blackbox_failing.py  test_cli_blackbox_passing.py
