[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "rigorq"
dynamic = ["version"]
description = "Mechanical precision for Python quality gates — strict PEP 8 enforcement with gap-filling checks"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "John Kagunda", email = "johnmkagunda@gmail.com" },
]
maintainers = [
  { name = "John Kagunda", email = "johnmkagunda@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
keywords = [
  "pep8",
  "lint",
  "quality",
  "style",
  "docstring",
  "ruff",
  "static-analysis",
]

# NO runtime dependencies — rigorq uses stdlib only
# Ruff is a peer dependency (user installs separately)
dependencies = []

[project.optional-dependencies]
dev = [
  "build",
  "coverage[toml]",
  "hatch",
  "hatch-vcs",
  "hatchling",
  "mypy",
  "pytest",
  "pytest-cov",
  "ruff",  # For self-linting rigorq's own codebase
  "types-python-dateutil",
]

[project.urls]
Homepage = "https://github.com/rafaelJohn9/rigorq"
Repository = "https://github.com/rafaelJohn9/rigorq"
Issues = "https://github.com/rafaelJohn9/rigorq/issues"
Documentation = "https://github.com/rafaelJohn9/rigorq#readme"

[project.scripts]
rigorq = "rigorq.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/rigorq"]

# Self-linting config for rigorq's own codebase
[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "D",   # pydocstyle (PEP 257)
  "N",   # naming conventions
  "UP",  # pyupgrade
  "I",   # isort
  "PLC3002", # no lambda assignment
]
ignore = [
  "D100", # Missing docstring in public module (we document key APIs only)
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in __init__
  "D203", # 1 blank line before class docstring (conflicts with D211)
  "D212", # Multi-line summary first line (prefer D213)
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
known-first-party = ["rigorq"]

[tool.pytest.ini_options]
addopts = [
  "--strict-markers",
  "--tb=short",
  "-v",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = ["rigorq"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise AssertionError",
  "raise NotImplementedError",
]
